@@ -7,6 +7,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static io.restassured.RestAssured.given;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -24,28 +25,28 @@ public class StreamApiExamples {
 
     @Test
     public void checkCrypto() {
-        List<TickerData> usdTickers = getTickers().stream().filter(x -> x.getSymbol().endsWith("USDT")).toList();
+        List<TickerData> usdTickers = getTickers().stream().filter(x -> x.getSymbol().endsWith("USDT")).collect(Collectors.toList());
         assertTrue(usdTickers.stream().allMatch(x -> x.getSymbol().endsWith("USDT")));
     }
 
     @Test
     public void sortHighToLow() {
         List<TickerData> highToLow = getTickers().stream().filter(x -> x.getSymbol().endsWith("USDT")).sorted((o1, o2) -> o2.getChangeRate().compareTo(o1.getChangeRate())).toList();
-        List<TickerData> top10 = highToLow.stream().limit(10).toList();
+        List<TickerData> top10 = highToLow.stream().limit(10).collect(Collectors.toList());
         int t = 9;
     }
 
     @Test
     public void sortLowToHigh() {
         List<TickerData> lowToHigh = getTickers().stream().filter(x -> x.getSymbol().endsWith("USDT"))
-                .sorted(new TickerComparatorLow()).limit(10).toList();
+                .sorted(new TickerComparatorLow()).limit(10).collect(Collectors.toList());
         int a = 0;
     }
 
     @Test
     public void changeMap(){
         Map<String, Float> usd = new HashMap<>();
-        List<String> lowerCases = getTickers().stream().map(x -> x.getSymbol().toLowerCase()).toList();
+        List<String> lowerCases = getTickers().stream().map(x -> x.getSymbol().toLowerCase()).collect(Collectors.toList());
 //        getTickers().forEach(x-> usd.put(x.getSymbol(), Float.parseFloat(x.getChangeRate())));
         List<TickerShort> shortList = new ArrayList<>();
         getTickers().forEach(x->shortList.add(new TickerShort(x.getSymbol(), Float.parseFloat(x.getChangeRate()))));
